--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 bin/
 obj/
 out/
-extensions/*.dll
-extensions/*.bat
 include/*.bat
-http-debug.txt
 sqlite-gui.depend
 sqlite-gui.layout
-ToDo.txt
+*.txt
 *.bat
