--- a/src/resource.rc
+++ b/src/resource.rc
@@ -129,7 +129,7 @@ IDD_EDITDATA DIALOGEX 0, 0, 500, 300
 	CAPTION "View/Edit table data"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_ROWS, WC_LISTVIEW, WS_VSCROLL | LVS_REPORT | WS_TABSTOP, 0, 10, 400, 80, WS_EX_STATICEDGE /* | WS_EX_CONTROLPARENT */
+	CONTROL "", IDC_DLG_ROWS, WC_LISTVIEW, WS_VSCROLL | LVS_REPORT | WS_TABSTOP | LVS_OWNERDATA, 0, 10, 400, 80, WS_EX_STATICEDGE /* | WS_EX_CONTROLPARENT */
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -140,6 +140,14 @@ IDD_EDITDATA_VALUE DIALOGEX 10, 10, 500, 400
 BEGIN
 	CONTROL "", IDC_DLG_EDITOR, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP | ES_NOHIDESEL, 0, 0, 498, 273, WS_EX_STATICEDGE
 	PUSHBUTTON "OK", IDC_DLG_OK, 196, 282, 54, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_VALUE_VIEWER DIALOGEX 10, 10, 500, 400
+	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "View value"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -162,12 +170,12 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 0, 0, 215, 220
+IDD_SETTINGS DIALOGEX 0, 0, 215, 230
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 190, WS_EX_CONTROLPARENT
+	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 200, WS_EX_CONTROLPARENT
 
 	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 5, 3, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 18, 180, 14, BS_NOTIFY | WS_TABSTOP
@@ -175,12 +183,13 @@ BEGIN
 	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 48, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Disable autocomplete help", IDC_DLG_DISABLE_HELP, 5, 63, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 78, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Apply resultset filters automatically", IDC_DLG_AUTO_FILTERS, 5, 93, 180, 14, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Apply filters to a resultset without ENTER", IDC_DLG_AUTO_FILTERS, 5, 93, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 108, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 123, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 138, 145, 14, BS_NOTIFY | WS_TABSTOP
 	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 150, 140, 33, 13, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 153, 180, 14, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use logger.exe for debugging", IDC_DLG_USE_LOGGER, 5, 168, 180, 14, BS_NOTIFY | WS_TABSTOP | BS_NOTIFY
 
 	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7, 20, 14, SS_LEFT
 	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5, 129, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -226,11 +235,14 @@ BEGIN
 	LTEXT "Google API key", IDC_DLG_GOOGLE_KEY_LABEL, 5, 90, 150, 10, SS_LEFT
 	EDITTEXT IDC_DLG_GOOGLE_KEY, 5, 100, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
 
-	LTEXT "Extension respository", IDC_DLG_EXTENSION_REPOSITORY_LABEL, 5, 120, 152, 10, SS_LEFT
-	EDITTEXT IDC_DLG_EXTENSION_REPOSITORY, 5, 130, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
+	LTEXT "Viewer plugin respository", IDC_DLG_VIEWER_REPOSITORY_LABEL, 5, 118, 152, 10, SS_LEFT
+	EDITTEXT IDC_DLG_VIEWER_REPOSITORY, 5, 128, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 86, 201, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 201, 60, 14, WS_TABSTOP
+	LTEXT "SQLite extension respository", IDC_DLG_EXTENSION_REPOSITORY_LABEL, 5, 146, 152, 10, SS_LEFT
+	EDITTEXT IDC_DLG_EXTENSION_REPOSITORY, 5, 156, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 86, 211, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 211, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -257,8 +269,9 @@ IDD_ENCRYPTION DIALOGEX 50, 50, 220, 215
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Password", IDC_DLG_LABEL, 5, 7, 35, 12, SS_LEFT
-	EDITTEXT IDC_DLG_CIPHER_KEY, 40, 5, 135, 13, WS_BORDER | WS_TABSTOP
+	EDITTEXT IDC_DLG_CIPHER_KEY, 40, 5, 125, 13, WS_BORDER | WS_TABSTOP | ES_PASSWORD
 
+	LTEXT "", IDC_DLG_CIPHER_SHOW_KEY, 167, 5, 12, 12, SS_NOTIFY | WS_TABSTOP | SS_ICON
 	AUTOCHECKBOX "Store", IDC_DLG_CIPHER_STORE_KEY, 182, 5, 30, 12, BS_NOTIFY | WS_TABSTOP
 
 	LTEXT "Cipher", IDC_DLG_LABEL, 5, 7 + 15, 35, 14, SS_LEFT
@@ -363,12 +376,12 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_EXTENSIONS DIALOGEX 100, 50, 400, 300
+IDD_ADDON_MANAGER DIALOGEX 100, 50, 400, 300
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
-	CAPTION "Extension manager"
+	CAPTION "Addon manager"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_EXTENSION_LIST, WC_LISTVIEW, WS_TABSTOP| WS_CLIPSIBLINGS | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS | LVS_SINGLESEL | WS_TABSTOP, 0, 0, 400, 300, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_ADDON_LIST, WC_LISTVIEW, WS_TABSTOP| WS_CLIPSIBLINGS | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS | LVS_SINGLESEL | WS_TABSTOP, 0, 0, 400, 300, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -413,7 +426,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_COLOR_PICKER DIALOGEX 30, 60, 150, 184
+IDD_COLOR_PICKER DIALOGEX 30, 60, 200, 184
 	STYLE DS_MODALFRAME | WS_CAPTION | WS_POPUP | WS_SYSMENU
 	CAPTION "Color"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -757,7 +770,6 @@ BEGIN
 			MENUITEM "No recents", IDM_RECENT_ATTACHED_ODBC, GRAYED
 		END
 		MENUITEM SEPARATOR
-		MENUITEM "Extension manager", IDM_EXTENSIONS
 		MENUITEM "Custom functions", IDM_CUSTOM_FUNCTIONS
 		MENUITEM "Set encryption", IDM_ENCRYPTION, GRAYED
 		MENUITEM "Settings", IDM_SETTINGS
@@ -811,6 +823,12 @@ BEGIN
 		MENUITEM "Add desktop shortcut", IDM_DESKTOP_SHORTCUT, GRAYED
 		MENUITEM "Locate database", IDM_LOCATE_FILE, GRAYED
 		MENUITEM "Statistics", IDM_STATISTICS, GRAYED
+	END
+
+	POPUP "Add-ons"
+	BEGIN
+		MENUITEM "Viewer plugins", IDM_VIEWER_PLUGINS
+		MENUITEM "SQlite extensions", IDM_EXTENSIONS
 	END
 
 	POPUP "?"
@@ -964,7 +982,7 @@ BEGIN
 		MENUITEM "Paste\tCtrl+V", IDM_EDITOR_PASTE
 		MENUITEM "Delete\tDel", IDM_EDITOR_DELETE
 		MENUITEM SEPARATOR
-		MENUITEM "Find\tCtrl+F", IDM_EDITOR_FIND
+		MENUITEM "Find\tCtrl+R", IDM_EDITOR_FIND
 	END
 END
 
@@ -1009,18 +1027,25 @@ IDC_MENU_EDIT_DATA MENU
 BEGIN
 	POPUP "Edit data"
 	BEGIN
+		MENUITEM "Filter by value", IDM_RESULT_VALUE_FILTER
+		MENUITEM SEPARATOR
+		MENUITEM "View value\tF4", IDM_VALUE_VIEW
 		MENUITEM "Edit value\tAlt+Enter", IDM_VALUE_EDIT
 		MENUITEM "Set to NULL\tAlt+Del", IDM_VALUE_NULL
-		MENUITEM "Filter by value\tAlt+F", IDM_RESULT_VALUE_FILTER
+		POPUP "Value as file"
+		BEGIN
+			MENUITEM "Open as file", IDM_VALUE_FILE_OPEN
+			MENUITEM "Save to file", IDM_VALUE_FILE_SAVE
+			MENUITEM "Set from file", IDM_VALUE_FILE_SET
+			MENUITEM "Edit as file", IDM_VALUE_FILE_EDIT
+		END
 		MENUITEM SEPARATOR
-		MENUITEM "Edit\tEnter", IDM_ROW_EDIT
-		MENUITEM "Delete\tDel", IDM_ROW_DELETE
-		MENUITEM "Duplicate", IDM_ROW_DUPLICATE
+		MENUITEM "Edit row\tEnter", IDM_ROW_EDIT
+		MENUITEM "Delete row\tDel", IDM_ROW_DELETE
+		MENUITEM "Duplicate row(s)", IDM_ROW_DUPLICATE
 		MENUITEM SEPARATOR
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row(s) to clipboard\tCtrl+C", IDM_RESULT_COPY_ROW
-		MENUITEM SEPARATOR
-		MENUITEM "Export to csv", IDM_RESULT_EXPORT
 	END
 END
 
@@ -1029,23 +1054,17 @@ IDC_MENU_VIEW_DATA MENU
 BEGIN
 	POPUP "View data"
 	BEGIN
+		MENUITEM "Filter by value", IDM_RESULT_VALUE_FILTER
+		MENUITEM SEPARATOR
+		MENUITEM "View value\tF4", IDM_VALUE_VIEW
+		POPUP "Value as file"
+		BEGIN
+			MENUITEM "Open as file", IDM_VALUE_FILE_OPEN
+			MENUITEM "Save to file", IDM_VALUE_FILE_SAVE
+		END
+		MENUITEM SEPARATOR
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
-		MENUITEM "Copy row(s) to clipboard", IDM_RESULT_COPY_ROW
-		MENUITEM SEPARATOR
-		MENUITEM "Export to csv", IDM_RESULT_EXPORT
-	END
-END
-
-LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_MENU_BLOB MENU
-BEGIN
-	POPUP "Blob"
-	BEGIN
-		MENUITEM "View as file\tAlt+Enter", IDM_VALUE_EDIT
-		MENUITEM SEPARATOR
-		MENUITEM "Set to NULL\tAlt+Del", IDM_VALUE_NULL
-		MENUITEM "Set from file", IDM_BLOB_IMPORT
-		MENUITEM "Save to file", IDM_BLOB_EXPORT
+		MENUITEM "Copy row(s) to clipboard\tCtrl+C", IDM_RESULT_COPY_ROW
 	END
 END
 
@@ -1084,23 +1103,14 @@ BEGIN
 END
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_MENU_PREVIEW_IMAGE MENU
+IDC_MENU_PREVIEW MENU
 BEGIN
-	POPUP "Image Preview"
+	POPUP "Preview value"
 	BEGIN
-		MENUITEM "Save to file", IDM_EXPORT_FILE
-		MENUITEM "View as file", IDM_BLOB_VIEW
-	END
-END
-
-LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_MENU_PREVIEW_TEXT MENU
-BEGIN
-	POPUP "Text Preview"
-	BEGIN
-		MENUITEM "Copy", IDM_EDITOR_COPY
-		MENUITEM "Save to file", IDM_EXPORT_FILE
-		MENUITEM "View as file", IDM_BLOB_VIEW
+		MENUITEM "Switch plugin", IDM_PREVIEW_SWITCH_PLUGIN
+		MENUITEM SEPARATOR
+		MENUITEM "Save to file", IDM_PREVIEW_TO_FILE
+		MENUITEM "Open as file", IDM_PREVIEW_AS_FILE
 	END
 END
 
@@ -1182,7 +1192,7 @@ BEGIN
 		"Ctrl + Down - Next query\n" \
 		"Ctrl + Tab - Find query beginning with input part\n\n" \
 		"Query resultset\n" \
-		"Ctrl + Click - View a cell value\n" \
+		"F4 - View a cell value\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
 		"Ctrl + 1, Ctrl + 2, ... - Sort by column 1, 2, ... \n" \
 		"Ctrl + I - Invert row selection\n" \
@@ -1197,7 +1207,6 @@ BEGIN
 		"Alt + Del - Set the cell value to NULL\n" \
 		"F2 - Edit the cell value without clearing\n" \
 		"Space - Edit the cell value with clearing\n" \
-		"Alt + F - Use the cell value as a column filter\n" \
 		"Ctrl + Space - Set cell value as one of column values or as FK\n"
 		"Alt + Click - Show data if the column references to another table by FK key\n" \
 		"Alt + Click - Open BLOB as file\n\n" \
@@ -1299,6 +1308,7 @@ IDB_TOOLBAR_DATA16 BITMAP "resources/toolbar_data16.bmp"
 IDB_TOOLBAR_DATA24 BITMAP "resources/toolbar_data24.bmp"
 IDB_TOOLBAR_FUNCTIONS16 BITMAP "resources/toolbar_functions16.bmp"
 IDB_TOOLBAR_FUNCTIONS24 BITMAP "resources/toolbar_functions24.bmp"
+IDB_ICONS BITMAP "resources/icons.bmp"
 IDB_TAB BITMAP "resources/tab.bmp"
 
 IDR_INIT RCDATA "resources/init.sql"
